我的页面优化

--- a/app/src/main/res/layout/layout_bell_pre_live_hot_seat.xml
+++ b/app/src/main/res/layout/layout_bell_pre_live_hot_seat.xml
@@ -10,6 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="@dimen/y50"
         android:layout_gravity="center_vertical"
+        android:layout_marginStart="@dimen/y33"
         hunt:ll_big_inner_color="@color/color_FF1744"
         hunt:ll_big_inner_radius="@dimen/y5"
         hunt:ll_big_outer_color="@color/color_33FF1744"
@@ -22,6 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="@dimen/y50"
         android:layout_gravity="center_vertical|end"
+        android:layout_marginEnd="@dimen/y33"
         hunt:ll_big_inner_color="@color/color_41B56A"
         hunt:ll_big_inner_radius="@dimen/y5"
         hunt:ll_big_outer_color="@color/color_3341B56A"
