--- a/app/src/main/res/layout/fragment_home_mine_setting.xml
+++ b/app/src/main/res/layout/fragment_home_mine_setting.xml
@@ -85,7 +85,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:checked="true"
+                    android:checked="false"
                     android:paddingRight="@dimen/x26" />
 
                 <View
@@ -119,7 +119,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:checked="true"
+                    android:checked="false"
                     android:paddingRight="@dimen/x26" />
 
                 <View
