--- a/app/src/main/res/layout/fragment_bind_doorbell.xml
+++ b/app/src/main/res/layout/fragment_bind_doorbell.xml
@@ -53,7 +53,7 @@
             android:background="@drawable/add_image_ring">
 
             <ImageView
-                android:id="@+id/imgV_wifi_light_red_dot_left"
+                android:id="@+id/imgV_power_light"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -63,7 +63,7 @@
                 android:visibility="invisible" />
 
             <ImageView
-                android:id="@+id/imgV_wifi_light_red_dot_right"
+                android:id="@+id/imgV_wifi_light"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical|end"
@@ -73,7 +73,7 @@
                 android:visibility="invisible" />
 
             <ImageView
-                android:id="@+id/imgV_hand_left"
+                android:id="@+id/imgV_hand"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal|bottom"
@@ -82,7 +82,7 @@
                 android:visibility="invisible" />
 
             <ImageView
-                android:id="@+id/imgV_hand_right"
+                android:id="@+id/imgV_hand_to_right"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal|bottom"
