增加睿思添加流程

--- a/app/src/main/res/layout/activity_bind_device.xml
+++ b/app/src/main/res/layout/activity_bind_device.xml
@@ -49,6 +49,17 @@
             hunt:textSize="@dimen/sp16" />
 
         <com.cylan.jiafeigou.widget.HomeMineItemView
+            android:id="@+id/v_to_bind_rs_cam"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/y67"
+            android:background="@color/color_white"
+            hunt:leftDrawable="@drawable/icon_home_camera_online"
+            hunt:rightDrawable="@drawable/icon_mine_arrow_next"
+            hunt:text="@string/RuiShi_Name"
+            hunt:textColor="@color/color_383838"
+            hunt:textSize="@dimen/sp16" />
+
+        <com.cylan.jiafeigou.widget.HomeMineItemView
             android:id="@+id/v_to_bind_panorama_camera"
             android:layout_width="match_parent"
             android:layout_height="@dimen/y67"
