--- a/app/src/main/res/layout/activity_bind_cam.xml
+++ b/app/src/main/res/layout/activity_bind_cam.xml
@@ -54,8 +54,9 @@
             android:layout_gravity="center"
             android:background="@drawable/add_image_wifilight" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <FrameLayout
+            android:id="@+id/fLayout_hand"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center_horizontal"
             android:layout_marginBottom="@dimen/y20"
@@ -74,9 +75,11 @@
                 android:id="@+id/imgV_camera_hand"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="end"
                 android:layout_marginTop="@dimen/y10"
+                android:alpha="0.0"
                 android:src="@drawable/image_hand" />
-        </LinearLayout>
+        </FrameLayout>
 
     </FrameLayout>
 
