--- a/app/src/main/res/layout/activity_bind_cam.xml
+++ b/app/src/main/res/layout/activity_bind_cam.xml
@@ -76,7 +76,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:src="@drawable/add_image_red_dot"
-                android:visibility="visible" />
+                android:visibility="invisible" />
 
             <ImageView
                 android:id="@+id/imgV_camera_hand"
