--- a/app/src/main/res/layout/layout_live_view_with_thumbnail.xml
+++ b/app/src/main/res/layout/layout_live_view_with_thumbnail.xml
@@ -7,6 +7,7 @@
         android:id="@+id/imgv_live_thumbnail"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scaleType="fitXY"
         android:src="@drawable/default_diagram_mask"
         android:visibility="gone" />
 
