--- a/app/src/_cell_c/res/values/oem_.xml
+++ b/app/src/_cell_c/res/values/oem_.xml
@@ -5,4 +5,5 @@
     <bool name="show_about">false</bool>
     <bool name="show_official_website">false</bool>
     <bool name="show_official_hot_line">false</bool>
+    <bool name="show_ruishi_interface">false</bool>
 </resources>
