--- a/app/src/main/res/values/oem_.xml
+++ b/app/src/main/res/values/oem_.xml
@@ -5,4 +5,5 @@
     <bool name="show_about">true</bool>
     <bool name="show_official_website">true</bool>
     <bool name="show_official_hot_line">true</bool>
+    <bool name="show_ruishi_interface">false</bool>
 </resources>
