--- a/app/src/main/res/layout/fragment_submit_binding_info.xml
+++ b/app/src/main/res/layout/fragment_submit_binding_info.xml
@@ -37,7 +37,7 @@
                 android:padding="@dimen/x10"
                 hunt:progress_point_radius="@dimen/x5"
                 hunt:progress_radius="@dimen/x100"
-                hunt:progress_stroke_color="@color/color_4b9fd5"
+                hunt:progress_stroke_color="#bbddfb"
                 hunt:progress_swipe_degree="330" />
 
             <TextView
