--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -26,15 +26,15 @@
 
     <style name="CamActivityTheme" parent="AppTheme" />
 
-    <style name="MediaActivityTransition" parent="AppTheme">
-        <item name="android:statusBarColor">@android:color/black</item>
-        <item name="android:windowContentTransitions">true</item>
-        <item name="android:windowTranslucentStatus">false</item>
-        <item name="android:windowEnterTransition">@transition/details_window_enter_transition
-        </item>
-        <item name="android:windowReturnTransition">@transition/details_window_return_transition
-        </item>
-    </style>
+    <!--<style name="MediaActivityTransition" parent="AppTheme">-->
+        <!--<item name="android:statusBarColor">@android:color/black</item>-->
+        <!--<item name="android:windowContentTransitions">true</item>-->
+        <!--<item name="android:windowTranslucentStatus">false</item>-->
+        <!--<item name="android:windowEnterTransition">@transition/details_window_enter_transition-->
+        <!--</item>-->
+        <!--<item name="android:windowReturnTransition">@transition/details_window_return_transition-->
+        <!--</item>-->
+    <!--</style>-->
 
     <style name="CamDelayRecordStyle" parent="AppTheme"></style>
     <!--普通样式-->
