1.点击下载图片到相册,需要存储权限,2.首页显示列表没有视角等待.

--- a/app/src/main/res/layout/fragment_submit_binding_info.xml
+++ b/app/src/main/res/layout/fragment_submit_binding_info.xml
@@ -45,8 +45,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:fontFamily="sans-serif-thin"
                 android:textColor="@color/color_36BDFF"
-                android:textSize="57sp" />
+                android:textSize="@dimen/sp57" />
         </FrameLayout>
 
         <RelativeLayout
