--- a/app/src/main/res/layout/layout_bell_pre_live_hot_seat.xml
+++ b/app/src/main/res/layout/layout_bell_pre_live_hot_seat.xml
@@ -1,42 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.cylan.jiafeigou.widget.bell.DragLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:hunt="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/dLayout_bell_hot_seat"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    hunt:ll_big_outer_radius="@dimen/y10">
+    android:layout_height="wrap_content">
 
     <com.cylan.jiafeigou.widget.bell.LLView
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/y50"
-        android:layout_gravity="center_vertical"
-        android:layout_marginStart="@dimen/y33"
-        hunt:ll_big_inner_color="@color/color_FF1744"
-        hunt:ll_big_inner_radius="@dimen/y5"
-        hunt:ll_big_outer_color="@color/color_33FF1744"
-        hunt:ll_big_outer_radius="@dimen/y10"
-        hunt:ll_small_color="@color/color_33FF1744"
-        hunt:ll_small_interval="@dimen/y10"
-        hunt:ll_small_radius="@dimen/y2" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="@dimen/y51"
+        app:ll_big_inner_color="@color/color_FF1744"
+        app:ll_big_inner_radius="@dimen/y5"
+        app:ll_big_interval="@dimen/y16"
+        app:ll_big_outer_color="@color/color_33FF1744"
+        app:ll_big_outer_radius="@dimen/y10"
+        app:ll_small_color="@color/color_33FF1744"
+        app:ll_small_interval="@dimen/y10"
+        app:ll_small_radius="@dimen/y2" />
 
     <com.cylan.jiafeigou.widget.bell.LLView
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/y50"
-        android:layout_gravity="center_vertical|end"
-        android:layout_marginEnd="@dimen/y33"
-        hunt:ll_big_inner_color="@color/color_41B56A"
-        hunt:ll_big_inner_radius="@dimen/y5"
-        hunt:ll_big_outer_color="@color/color_3341B56A"
-        hunt:ll_big_outer_radius="@dimen/y10"
-        hunt:ll_reverse="true"
-        hunt:ll_small_color="@color/color_3341B56A"
-        hunt:ll_small_interval="@dimen/y10"
-        hunt:ll_small_radius="@dimen/y2" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="@dimen/y51"
+        app:ll_big_inner_color="@color/color_41B56A"
+        app:ll_big_inner_radius="@dimen/y5"
+        app:ll_big_interval="@dimen/y16"
+        app:ll_big_outer_color="@color/color_3341B56A"
+        app:ll_big_outer_radius="@dimen/y10"
+        app:ll_reverse="true"
+        app:ll_small_color="@color/color_3341B56A"
+        app:ll_small_interval="@dimen/y10"
+        app:ll_small_radius="@dimen/y2" />
 
     <ImageView
         android:id="@+id/view_bell_handle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_centerInParent="true"
         android:src="@drawable/icon_bell_ringing" />
 </com.cylan.jiafeigou.widget.bell.DragLayout>
