--- a/app/src/main/res/layout/fragment_hardware_update.xml
+++ b/app/src/main/res/layout/fragment_hardware_update.xml
@@ -139,7 +139,8 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/y64"
         android:layout_alignParentBottom="true"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <View
             android:layout_width="match_parent"
@@ -147,7 +148,7 @@
             android:background="@color/color_e1e1e1" />
 
         <TextView
-            android:id="@+id/tv_loading_show"
+            android:id="@+id/tv_percent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
